--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@
           <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
 
+          <p class="view"><a href="https://dornsife.usc.edu/cf/ling/ling_student_display.cfm?Person_ID=1084384">View my USC page</a></p>
         <!---{% if site.show_downloads %}
           <ul>
             <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
