--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,8 @@
         <a href="{{ site.github.url }}"> <h1> Chloé Gfeller </h1> </a>
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
+        <img src="../assets/pic.jpg" alt="Italian Trulli">
+
         {% if site.github.is_project_page %}
           <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
         {% endif %}
