--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,13 +21,13 @@
 
         <img src="../assets/pic.jpg" alt="This is me">
 
-        {% if site.github.is_project_page %}
+<!--        {% if site.github.is_project_page %}
           <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
         {% endif %}
 
         {% if site.github.is_user_page %}
           <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %}
+        {% endif %} -->
 
           <p class="view"><a href="https://dornsife.usc.edu/cf/ling/ling_student_display.cfm?Person_ID=1084384">View my USC page</a></p>
         <!---{% if site.show_downloads %}
