--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
         <a href="{{ site.github.url }}"> <h1> Chloé Gfeller </h1> </a>
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        <img src="../assets/pic.jpg" alt="This is me">
+        <img src="../assets/picture.jpg" alt="This is me">
 
 <!--        {% if site.github.is_project_page %}
           <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
